# xlauncher-stage-1

./: .gitignore  Cargo.toml  erdpy.data-storage-devnet.json
xlaucher-presale-contract/: Cargo.toml  README.md  erdpy.data-storage-collection.json  erdpy.data-storage-devnet.json  erdpy.data-storage-mainnet.json  erdpy.data-storage-testnet.json
xlaucher-presale-contract/interaction/: contract.snippets.sh
xlaucher-presale-contract/interaction-logs/: .pointer
xlaucher-presale-contract/mandos/: 009-stake-and-buy-ok.scen.json  01-deploy.scen.json  010-stake-and-buy-ok.scen.json  011-stake-and-buy-max-allowed-ok.scen.json  012-stake-and-buyback-max-allowed-ok.scen.json  02-fund.scen.json  03-buy-ok.scen.json  04-buy-125-ok.scen.json  05-buy-6250-ok.scen.json  06-collect.scen  06-collect.scen.json  07-buy-to-mutch.scen.json  08-buy-check-pull-1ok.scen.json  08-test-pricing-for-presale-round-2.scen  09-fund-z2i.scen.json  09-stake-and-buy-ok.scen.json
xlaucher-presale-contract/meta/: Cargo.toml
xlaucher-presale-contract/output/: xlauncher-presale.abi.json
xlaucher-presale-contract/src/: xlauncher-presale.rs
xlaucher-presale-contract/tests/: xlauncher_presale_tests.rs
xlaucher-presale-contract/wasm/: Cargo.toml
xlauncher-staking-contract/: Cargo.toml  README.md  erdpy.data-storage-devnet-current.json  erdpy.data-storage-devnet-debug.json  erdpy.data-storage-devnet.json  mxpy.data-storage-devnet.json  mxpy.data-storage-mainnet.json  mxpy.data-storage-testnet.json  notes.md
xlauncher-staking-contract/interaction/: contract-interactions.sh  contract-snippets.sh
xlauncher-staking-contract/mandos/: 01-deploy.scen.json  02-stake-pull-a-ignored.json  02-stake-pull-a.scen.json  03-claim-pull-a.ignore.json  03-claim-pull-a.scen.json  04-claim-case-1.json  04-claim-case-1.scen.json  04-claim-case-2-1-sec.scen.json  04-claim-case-2.scen.json  04-claim-case-3.json  04-claim-case-3.scen.json  04-claim-case-4.json  04-claim-case-4.scen.json  04-claim-case-5.json  04-claim-case-5.scen.json  04-claim-case-6.scen.json  04-claim-case-7.scen.json  05-reinvest-case-1.scen.json  05-reinvest-case-2.scen.json  06-fund.scen.json  (+24 more)
xlauncher-staking-contract/mandos-copy/: 04-claim-case-3.scen.json  04-claim-case-7.scen.json  05-reinvest-case-5.scen.json
xlauncher-staking-v2/: .gitignore  Cargo.toml  mxpy.data-storage-devnet-alternate1.json  mxpy.data-storage-devnet.json  mxpy.data-storage-mainnet.json  mxpy.data-storage-testnet.json
(+222 files in other folders)
