[package]
name = "xlauncher-staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path= "src/xlauncher-staking.rs"

[dependencies]

[dependencies.elrond-wasm]
version = "0.31.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.31.0"
