[package]
name = "xlauncher-staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/xlauncher_staking.rs"

[dependencies]

[dependencies.multiversx-sc]
version = "0.39.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.39.4"