[package]
name = "xlauncher-presale-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies.xlauncher-presale]
path = ".."

[dependencies.elrond-wasm]
version = "0.34.0"

[dependencies.elrond-wasm-debug]
version = "0.34.0"
