[package]
name = "xlauncher-staking-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies.xlauncher-staking]
path = ".."

[dependencies.elrond-wasm]
version = "0.31.0"

[dependencies.elrond-wasm-debug]
version = "0.31.0"
