[package]
name = "xlauncher-staking-meta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies.xlauncher-staking]
path = ".."

[dependencies.multiversx-sc]
version = "0.39.4"

[dependencies.multiversx-sc-meta]
version = "0.39.4"